inventory/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: argocd
    app.kubernetes.io/instance: inventory
    service: inventory
    trigger: "1"
    version: v2
  name: inventory-v2
  namespace: onepasswordtest
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: argocd
      service: inventory
      version: v2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        app: argocd
        service: inventory
        trigger: "1"
        version: v2
    spec:
      containers:
      - env:
        - name: SPRING_PROFILES_ACTIVE
          value: dev
        - name: inventory.host
          value: inventory:8080
        - name: user.host
          value: user:8080
        - name: basket.host
          value: basket:8080
        image: quay.io/justindav1s/inventory:latest
        imagePullPolicy: Always
        name: inventory
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        securityContext: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: inventory-config-vol
        - name: securenote1
          mountPath: "/etc"
          readOnly: true  
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: inventory-sa
      serviceAccountName: inventory-sa
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: inventory-config
        name: inventory-config-vol
      - name: securenote1
        secret:
          secretName: secure-note1
          items:
          - key: ca.cer
            path: trust/ca.cer
