inventory/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
  labels:
    app: argocd
    service: inventory
    version: v2
  name: inventory
  namespace: onepasswordtest
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: inventory
    weight: 100
  wildcardPolicy: None
